@@ -1,0 +1,26 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/gpicview/gpicview-0.2.2.ebuild,v 1.1 2011/07/26 08:05:52 hwoarang Exp $
+
+EAPI=4
+
+DESCRIPTION="A Simple and Fast Image Viewer for X"
+HOMEPAGE="http://lxde.sourceforge.net/gpicview"
+SRC_URI="mirror://sourceforge/lxde/${P}.tar.gz"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~ppc ~x86"
+IUSE=""
+
+RDEPEND="virtual/jpeg
+	>=x11-libs/gtk+-2.6:2"
+DEPEND="${RDEPEND}
+	>=dev-util/intltool-0.40
+	dev-util/pkgconfig
+	sys-devel/gettext"
+
+src_install() {
+	emake DESTDIR="${D}" install
+	dodoc AUTHORS
+}
